--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext" rel="stylesheet">
 
-        <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
-            <title>Unique-tech</title>
+    <link class="nav__element" nk rel="stylesheet" href="./css/main.css">
+    <title>Unique-tech</title>
 </head>
 
 <body>
@@ -42,9 +42,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>search engine optimization</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -52,9 +50,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>affiliate marketting</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -62,9 +58,7 @@
             <div class="services__block">
                 <article class="services__content">
                     <h3>web design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae.
-                        Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum
-                        rerum molestiae hic!
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quibusdam enim totam recusandae. Ratione aliquid excepturi qui eveniet alias nemo vel, quod quis commodi voluptates, aliquam nostrum rerum molestiae hic!
                     </p>
                     <a href="#">view more </a>
                 </article>
@@ -86,74 +80,62 @@
             <h3>our features</h3>
             <div>
                 <h3>Visual Composer</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Responsive</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Retina Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Typography</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>VTheme Options Pannel</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Dummy Content</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Many Style Available</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Header Style</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>10000+ icons</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Support</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>Update</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
             <div>
                 <h3>SEO Ready</h3>
-                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with
-                    our.
+                <p>TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our.
                 </p>
             </div>
         </div>
@@ -168,6 +150,58 @@
     </section>
     <section class="projects">
         <div class="container">
+            <h2 class="projects__name grey-name">OUR BUSINESS RELAITED PROJECTS</h2>
+            <svg class="airplane"></svg>
+            <div class="projects__container">
+                <figure class="project__img">
+                    <img src="../src/img/svg/technical_aid.svg" alt="TECHNICAL AID">
+                    <figcaption>
+                        <a class="project__link">TECHNICAL AID</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/secure_access.svg" alt="SECURE ACCES">
+                    <figcaption>
+                        <a class="project__link">SECURE ACCES</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/market_research.svg" alt="MARKET RESEARCH">
+                    <figcaption>
+                        <a class="project__link">MARKET RESEARCH</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/credit.svg" alt="CREDIT">
+                    <figcaption>
+                        <a class="project__link">CREDIT</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/targetting.svg" alt="TARGETING">
+                    <figcaption>
+                        <a class="project__link">TARGETING</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/insurance.svg" alt="INSURANCE">
+                    <figcaption>
+                        <a class="project__link">INSURANCE</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/ecommerce.svg" alt="ECOMERSE">
+                    <figcaption>
+                        <a class="project__link">ECOMERSE</a>
+                    </figcaption>
+                </figure>
+                <figure class="project__img">
+                    <img src="../src/img/svg/office.svg" alt="OFFICE">
+                    <figcaption>
+                        <a class="project__link">OFFICE</a>
+                    </figcaption>
+                </figure>
+            </div>
         </div>
     </section>
     <section class="team">
