--- a/src/index.html
+++ b/src/index.html
@@ -168,9 +168,9 @@
                 <img src="./img/svg/happy_clerk.svg">
             </div>
             <div class="history__right">
-                <h2>our history</h2>
+                <h2 class="history__name grey-name">our history</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dicta nobis aliquam iusto asperiores obcaecati ab iure ipsum corporis, magni vitae recusandae dolore nostrum iste officia totam tempore ipsam molestias.</p>
-                <button class="history__button">button</button>
+                <button class="history__button yellow-btn">button</button>
             </div>
         </div>
     </section>
