--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
     </div>
 </section>
 <section class="features">
+    <div class="container">
     <h3 class="features__heading">our features</h3>
     <div class="features__section">
         <img src="img/svg/icons/notes27.svg">
@@ -181,6 +182,7 @@
             <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to
                 remember any shortcodes with our. </p>
         </div>
+    </div>
     </div>
 </section>
 <section class="packages">
