--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,18 +2,19 @@
 
 {% block content %}
 
-    {% include "partials/_header.html" %}
-    {% include "partials/_welcome.html" %}
-    {% include "partials/_services.html" %}
-    {% include "partials/_process.html" %}
-    {% include "partials/_features.html" %}
-    {% include "partials/_packages.html" %}
-    {% include "partials/_history.html" %}
-    {% include "partials/_projects.html" %}
-    {% include "partials/_team.html" %}
-    {% include "partials/_support.html" %}
-    {% include "partials/_hire_us.html" %}
-    {% include "partials/_footer.html" %}
+{% include "partials/_header.html" %}
+{% include "partials/_welcome.html" %}
+{% include "partials/_services.html" %}
+{% include "partials/_process.html" %}
+{% include "partials/_features.html" %}
+{% include "partials/_packages.html" %}
+{% include "partials/_history.html" %}
+{% include "partials/_projects.html" %}
+{% include "partials/_team.html" %}
+{% include "partials/_support.html" %}
+{% include "partials/_hire_us.html" %}
+{% include "partials/_footer.html" %}
+{% include "partials/_modal.html" %}
 
 
 {% endblock %}
