turn off aos for welcome

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     </script>
 </header>
 <section class="welcome welcome--bgColor">
-    <div class="container welcome__container container--no-padding" data-aos="fade-up">
+    <div class="container welcome__container container--no-padding"
+         <!--data-aos="fade-up"-->
+         >
         <figure class="hero">
             <figcaption class="hero__message">
                 <h1 class="hero__title">
