publish: Merge pull request #133 from MateAcademy-FE-study/v_readme_deploy
generated from commit 9900dd5d9462b08edfc5b69d9f59e5b00367d4cd

--- a/index.html
+++ b/index.html
@@ -341,24 +341,24 @@
 <section class="packages">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="section-name section-name--mw330  section-name--arrow-l">OUR PACKAGES</h2>
+            <h2 class="section-name section-name--mw330  section-name--arrow-l">our packages</h2>
         </div>
         <div class="packages__table">
-            <div class="packages__coll">
+            <div class="coll">
                 <h3 class="coll__name--mobile coll__btn--grey">BASIC</h3>
                 <div>
                     <h4 class="coll__name packages--grey">Basic</h4>
                     <ul>
                         <li class="coll__li"><span class="coll__span"> 5 web sites</span></li>
                         <li class="coll__li"><span class="coll__span">15 e-mails</span></li>
-                        <li class="coll__li"><span class="coll__span">l databases</span></li>
+                        <li class="coll__li"><span class="coll__span">5 MySql databases</span></li>
                         <li class="coll__li"><span class="coll__span">10 Gb storage</span></li>
                         <li class="coll__price packages--grey"><b class="coll__price--dol">$5</b>/mo.</li>
                     </ul>
                     <button class="coll__btn coll__btn--grey" type="button">ORDER NOW</button>
                 </div>
             </div>
-            <div class="packages__coll">
+            <div class="coll">
                 <h3 class="coll__name--mobile coll__btn--red">STANDART</h3>
                 <div>
                     <h4 class="coll__name packages--red">Standart</h4>
@@ -373,7 +373,7 @@
                     <button class="coll__btn coll__btn--red" type="button">ORDER NOW</button>
                 </div>
             </div>
-            <div class="packages__coll">
+            <div class="coll">
                 <h3 class="coll__name--mobile coll__btn--yellow">PREMIUM</h3>
                 <div>
                     <h4 class="coll__name packages--yellow">Premium</h4>
@@ -392,7 +392,7 @@
         <script>
             if (window.matchMedia('(max-width: 480px)').matches) {
                 $('.coll__name--mobile').next().hide();
-                $('.coll__name--mobile').click(function () {
+                $('.coll__name--mobile').click(function() {
                     $(this).next().slideToggle();
                     $('.coll__name--mobile').not(this).next().stop(true, true).slideUp();
                 });
@@ -433,8 +433,8 @@
 <section class="projects">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED
-                PROJECTS</h2>
+            <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED projects
+            </h2>
         </div>
         <div class="projects__block">
             <a href="#" class="projects__link ">
@@ -553,96 +553,90 @@
 <section class="support">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">UPDATES & SUPPORT</h2>
+            <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">updates & support</h2>
         </div>
         <div class="suppport__inner">
             <img class="b-lazy support__img" data-src="img/png/macbook_2.png" src="img/png/macbook_2_small.gif" alt="macbook">
             <div class="support__text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                    est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
             </div>
             <button class="support_button yellow-btn">SUPPORT CENTER</button>
         </div>
     </div>
 </section>
-<section class="hire_us">
+<section class="hire">
     <div class="container" data-aos="fade-up">
-        <div class="hire">
-            <div class="hire__wrap">
-
-                <img class="hire__img b-lazy" src="./img/png/hire_clean_small.jpg" data-src="./img/png/hire_clean.png" alt="hand work">
-                <div class="hire__img--overlay"></div>
+        <div class="hire-us">
+            <div class="hire-us__wrap">
+                <img class="hire-us__img b-lazy" src="./img/png/hire_clean_small.jpg" data-src="./img/png/hire_clean.png" alt="hand work">
+                <div class="hire-us__img--overlay"></div>
             </div>
-            <div class="hire__content">
-                <h3 class="hire__h3">NEED CREATIVE WORKERS?</h3>
-                <button class="hire__button button" id="one" type="button"><b>HIRE US</b></button>
+            <div class="hire-us__content">
+                <h3 class="hire-us__h3">NEED CREATIVE WORKERS?</h3>
+                <button class="hire-us__button button" id="one" type="button"><b>HIRE US</b></button>
             </div>
         </div>
     </div>
 </section>
 <footer class="footer" data-aos="fade-up">
     <div class="container container--footer">
-        <div class="footer-inner">
-            <nav class="footer-inner__menu">
-                <div class="footer-inner__list">
-                    <h3 class="menu__h3">PORTFOLIO</h3>
-                    <ul>
-                        <li class="menu__item"><a class="menu__link" href="#">Web Design</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Branding & Idefinity</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Mobile Design</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Print</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">User Interfase</a></li>
-                    </ul>
-                </div>
-                <div class="footer-inner__list">
-                    <h3 class="menu__h3">ABOUT</h3>
-                    <ul>
-                        <li class="menu__item"><a class="menu__link" href="#">The Company</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">History</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Vision</a></li>
-                    </ul>
-                </div>
-                <div class="footer-inner__list">
-                    <h3 class="menu__h3">GALLERY</h3>
-                    <ul>
-                        <li class="menu__item"><a class="menu__link" href="#">Flickr</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Picasa</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">iStickPhoto</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">PhotoDune</a></li>
-                    </ul>
-                </div>
-                <div class="footer-inner__list">
-                    <h3 class="menu__h3">CONTACT</h3>
-                    <ul>
-                        <li class="menu__item"><a class="menu__link" href="#">Basic Info</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Map</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">Contact Form</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="footer-inner__social">
-                <div class="social">
-                    <a class="social__block" href="#" aria-label="facebook">
-                        <i class="social__icon fab fa-facebook-f"></i>
-                    </a>
-                    <a class="social__block" href="#" aria-label="twitter">
-                        <i class="social__icon fab fa-twitter"></i>
-                    </a>
-                    <a class="social__block" href="#" aria-label="google">
-                        <i class="social__icon fab fa-google-plus-g"></i>
-                    </a>
-                    <a class="social__block" href="#" aria-label="linkedin">
-                        <i class="social__icon fab fa-linkedin-in"></i>
-                    </a>
-                </div>
-                <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
+        <nav class="footer__menu">
+            <div class="menu">
+                <h3 class="menu__h3">PORTFOLIO</h3>
+                <ul>
+                    <li class="menu__item"><a class="menu__link" href="#">Web Design</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Branding & Idefinity</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Mobile Design</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Print</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">User Interfase</a></li>
+                </ul>
             </div>
+            <div class="menu">
+                <h3 class="menu__h3">ABOUT</h3>
+                <ul>
+                    <li class="menu__item"><a class="menu__link" href="#">The Company</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">History</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Vision</a></li>
+                </ul>
+            </div>
+            <div class="menu">
+                <h3 class="menu__h3">GALLERY</h3>
+                <ul>
+                    <li class="menu__item"><a class="menu__link" href="#">Flickr</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Picasa</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">iStickPhoto</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">PhotoDune</a></li>
+                </ul>
+            </div>
+            <div class="menu">
+                <h3 class="menu__h3">CONTACT</h3>
+                <ul>
+                    <li class="menu__item"><a class="menu__link" href="#">Basic Info</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Map</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Contact Form</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="footer__social">
+            <div class="social">
+                <a class="social__block" href="#" aria-label="facebook">
+                    <i class="social__icon fab fa-facebook-f"></i>
+                </a>
+                <a class="social__block" href="#" aria-label="twitter">
+                    <i class="social__icon fab fa-twitter"></i>
+                </a>
+                <a class="social__block" href="#" aria-label="google">
+                    <i class="social__icon fab fa-google-plus-g"></i>
+                </a>
+                <a class="social__block" href="#" aria-label="linkedin">
+                    <i class="social__icon fab fa-linkedin-in"></i>
+                </a>
+            </div>
+            <p>Copiyright © 2015 Syed Miraj.All rights reserved.</p>
         </div>
+
     </div>
 </footer>
 <section class="modal modal__container">
